# serf-arm

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  DEBUGGING_GUIDE.md  README.md  debug_test_runner.sh  helper.sh  quick_test.py  run_all_tests.sh  test_pyserf.py  test_runner.sh
inc/: Double.h  (+16 more)
pywrapper/: CMakeLists.txt  README.md  wrapper.cpp
pywrapper/example/: main.py
src/alp/: CMakeLists.txt
src/alp/example/: CMakeLists.txt  adaptive_compress.cpp  rd_compress.cpp  simple_compress.cpp
src/alp/src/: falp.cpp
src/alp/test/: test_alp_sample.cpp
src/deflate/: CMakeLists.txt  DeflateCompressor.cpp  DeflateCompressor.h  DeflateDecompressor.cpp  DeflateDecompressor.h
src/elf/: CMakeLists.txt  ElfCompressor.cpp  elf_compressor.h  elf_decompressor.h  elf_utils.cc  elf_utils.h
src/gorilla/: CMakeLists.txt  gorilla_compressor.cc  gorilla_compressor.h  gorilla_decompressor.cc  gorilla_decompressor.h
src/lz4/: CMakeLists.txt  LZ4Compressor.cpp  LZ4Compressor.h  LZ4Decompressor.cpp  LZ4Decompressor.h  frameCompress.c
src/lz77/: CMakeLists.txt
src/machete/: CMakeLists.txt
src/serf/: CMakeLists.txt  SerfCompressor.h  SerfConstructCompressor.h  SerfXORDecompressor.h
src/serf/compressor/: ICompressor.h  INetCompressor.h  NetSerfQtCompressor.cpp  NetSerfQtCompressor.h  NetSerfXORCompressor.cpp  NetSerfXORCompressor.h  SerfCompressor.cpp  SerfCompressor.h  SerfConstructCompressor.cpp  SerfConstructCompressor.h  SerfQtCompressor.cpp  SerfQtCompressor.h  SerfXORCompressor.cpp  SerfXORCompressor.h  TorchSerfXORCompressor.cpp  TorchSerfXORCompressor.h  net_serf_qt_compressor.cc  net_serf_qt_compressor.h  net_serf_xor_compressor.cc  net_serf_xor_compressor.h  serf_qt_compressor.cc  serf_qt_compressor.h  serf_xor_compressor.cc  serf_xor_compressor.h  tensor_serf_xor_compressor.cc  tensor_serf_xor_compressor.h
src/serf/compressor32/: SerfQtCompressor32.cpp  SerfQtCompressor32.h  SerfXORCompressor32.cpp  SerfXORCompressor32.h  serf_qt_compressor_32.cc  serf_xor_compressor_32.cc  serf_xor_compressor_32.h
src/serf/compressor_32/: serf_qt_compressor_32.cc  serf_qt_compressor_32.h  serf_xor_compressor_32.cc  serf_xor_compressor_32.h
src/serf/concurrency/: SerfTransaction.cpp  SerfTransaction.h  TensorXORCompressTransaction.cpp  TensorXORCompressTransaction.h  TensorXORDecompressTransaction.cpp  TensorXORDecompressTransaction.h
src/serf/decompressor/: NetSerfQtDecompressor.cpp  NetSerfQtDecompressor.h  NetSerfXORDecompressor.cpp  NetSerfXORDecompressor.h  SerfDecompressor.cpp  SerfDecompressor.h  SerfQtDecompressor.cpp  SerfQtDecompressor.h  SerfXORDecompressor.cpp  SerfXORDecompressor.h  TorchSerfXORDecompressor.cpp  TorchSerfXORDecompressor.h  net_serf_qt_decompressor.cc  net_serf_qt_decompressor.h  net_serf_xor_decompressor.cc  net_serf_xor_decompressor.h  serf_qt_decompressor.cc  serf_qt_decompressor.h  serf_xor_decompressor.cc  serf_xor_decompressor.h  tensor_serf_xor_decompressor.cc  tensor_serf_xor_decompressor.h
src/serf/decompressor32/: SerfQtDecompressor32.cpp  SerfQtDecompressor32.h  SerfXORDecompressor32.cpp  SerfXORDecompressor32.h  serf_qt_decompressor_32.cc  serf_xor_decompressor_32.h
src/serf/decompressor_32/: serf_qt_decompressor_32.cc  serf_qt_decompressor_32.h  serf_xor_decompressor_32.cc  serf_xor_decompressor_32.h
src/serf/parallel/: tensor_xor_compress_manager.cc  tensor_xor_compress_manager.h  tensor_xor_decompress_manager.cc  tensor_xor_decompress_manager.h
src/serf/utils/: Array.h  Double.h  EliasDeltaCodec.cpp  EliasDeltaCodec.h  Float.h  InputBitStream.cpp  InputBitStream.h  OutputBitStream.cpp  OutputBitStream.h  PostOfficeResult.h  PostOfficeSolver.cpp  PostOfficeSolver.h  PostOfficeSolver32.cpp  PostOfficeSolver32.h  Serf32Utils.cpp  Serf32Utils.h  Serf64Utils.cpp  Serf64Utils.h  ZigZagCodec.h  elias_delta_codec.cc  elias_delta_codec.h  input_bit_stream.cc  input_bit_stream.h  output_bit_stream.h  post_office_result.h  post_office_solver.cc  post_office_solver.h  post_office_solver_32.cc  post_office_solver_32.h  serf_utils_32.cc  serf_utils_32.h  serf_utils_64.cc  serf_utils_64.h  zig_zag_codec.h
test/: Benchmark.cpp  BlockReader.cpp  CMakeLists.txt  Perf.cc  Perf.cpp  Perf_Conflict_ADT.cc  Perf_baseline_inc.hpp  Perf_expr_config.hpp  Perf_expr_data_struct.hpp  Perf_file_utils.hpp  TestArray.cpp  TestBitStream.cpp  TestChimp.cc  TestCompressors.cpp  TestDeflate.cpp  TestEliasDeltaCodec.cpp  TestFPC.cpp  TestGorilla.cc  TestLZ4.cpp  TestSerf.cpp  adjust_digit_calculator.cpp  overall_cr_table.csv  overall_ct_table.csv  overall_dt_table.csv  perf_table.csv  testDeflate.cpp  testSerf.cpp  test_Lz4.cpp  test_deflate.cpp  tsbs_cr_table.csv  tsbs_ct_table.csv  tsbs_dt_table.csv
test/baselines/HIRE/: .gitignore  LICENSE  README.md  apca.py  core.py  datasets_timeseries.ipynb  delta.py  experiments.py  final_experiments_hier.ipynb  hier.py  identity.py  itcompress.py  my_exp.py  quantize.py  requirements.txt  spartan.py  squish.py  xor.py
test/baselines/alp/: CMakeLists.txt
test/baselines/buff/: CMakeLists.txt  buff_decompressor.cc  input_bit_stream.h  output_bit_stream.cc
test/baselines/chimp128/: CMakeLists.txt
test/baselines/deflate/: CMakeLists.txt  input_bit_stream.h
test/baselines/elf/: CMakeLists.txt  ElfCompressor.cpp  ElfCompressor32.cpp  ElfDecompressor.cpp  ElfDecompressor32.cpp  defs.h  elf.h  utils.cc  utils32.cc
test/data_set/: Motor-temp.csv  Smart-grid.csv  Stocks-USA.csv  ap.csv  as.csv  bm.csv  bt.csv  bw.csv  conv.py  ct.csv  dt.csv  ir.csv  pm10.csv  sde.csv  suk.csv  susa.csv  ws.csv
test/testUtils/: TestArray.cpp  TestBitStream.cpp  TestEliasDeltaCodec.cpp  TestZigZagCodec.cpp
test/transmission/: README.md
test/unit_test/: SZ3_test.cc  TSZ_test.cc  TestAlp.cc  TestBuff.cc  TestDeflate.cpp  TestLZW.cc  TestMachete.cc  TestSZ.cc  TestSerf.cpp  alp_test.cc  buff_test.cc  chimp_test.cc  deflate_test.cc  elf_star_test.cc  elf_test.cc  fpc_test.cc  gorilla_test.cc  lz4_test.cc  lz77_test.cc  lzw_test.cc  machete_test.cc  serf_test.cc  sim_piece_test.cc  sprintz_test.cc  sz3c_test.cc  sz_test.cc
(+320 files in other folders)
